# RayTracing

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
cuda/: add_array.cu
cuda/include/: utils.cuh
maps/: map1.json  map2.json  map2_2.json  sphere.json  sphere2.json
src/: bin.rs  camera.rs  export.rs  lib.rs  loader.rs  main.rs  material.rs  object.rs  ray.rs  world.rs
src/gpu/: mod.rs
src/map/: camera.rs  config.rs  mod.rs  world.rs
src/material/: color.rs  glass.rs  light_source.rs  lightsource.rs  mod.rs  normal.rs  sun.rs
src/math/: mod.rs
src/object/: mod.rs  plane.rs  sphere.rs  sun.rs
src/object/sphere/: glass_sphere.rs  light_sphere.rs  mod.rs  normal_sphere.rs
src/test/: camera.rs  debug.rs  gpu.rs  mod.rs  plane.rs  ray.rs  sphere.rs  test_camera.rs  test_ray.rs  test_shpere.rs
