[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://docs.rs/glam/latest/glam/
glam = "0.23.0"

# https://rust-random.github.io/rand/rand_distr/index.html#
rand_distr = "0.4.3"

# https://docs.rs/rand/0.8.5/rand/
rand = "0.8.5"

# https://docs.rs/serde_json/latest/serde_json/
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }

# https://docs.rs/noise/0.8.2/noise/
noise = "0.8.2"